--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Responsive Video Calculator</title>
+    <title>Non-Zoomable Video Calculator</title>
     <style>
         * {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+            touch-action: none;
         }
 
         html, body {
             height: 100%;
             overflow: hidden;
+            position: fixed;
+            width: 100%;
+            font-size: 16px;
         }
 
         body {
@@ -57,7 +61,7 @@
         #display {
             width: 100%;
             height: 60px;
-            font-size: 24px;
+            font-size: 1.5rem;
             text-align: right;
             padding: 10px;
             margin-bottom: 20px;
@@ -75,13 +79,14 @@
         }
 
         button {
-            font-size: 18px;
+            font-size: 1.125rem;
             border: none;
             border-radius: 5px;
             background-color: rgba(255, 255, 255, 0.1);
             color: white;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.1s;
+            touch-action: manipulation;
         }
 
         button:hover {
@@ -123,11 +128,11 @@
 
             #display {
                 height: 80px;
-                font-size: 32px;
+                font-size: 2rem;
             }
 
             button {
-                font-size: 24px;
+                font-size: 1.5rem;
             }
         }
     </style>
@@ -178,6 +183,32 @@
                 document.getElementById('display').value = 'Error';
             }
         }
+
+        // Prevent default touch behaviors
+        document.addEventListener('touchstart', function(e) {
+            if (e.touches.length > 1) {
+                e.preventDefault();
+            }
+        }, { passive: false });
+
+        document.addEventListener('touchmove', function(e) {
+            e.preventDefault();
+        }, { passive: false });
+
+        // Prevent zooming on double-tap
+        let lastTouchEnd = 0;
+        document.addEventListener('touchend', function(e) {
+            const now = (new Date()).getTime();
+            if (now - lastTouchEnd <= 300) {
+                e.preventDefault();
+            }
+            lastTouchEnd = now;
+        }, { passive: false });
+
+        // Disable pinch-zoom
+        document.addEventListener('gesturestart', function(e) {
+            e.preventDefault();
+        }, { passive: false });
     </script>
 </body>
-      </html>
+    </html>
