--- a/index.html
+++ b/index.html
@@ -131,23 +131,25 @@
             <input type="text" id="display" readonly>
             <div class="buttons">
                 <button class="clear" onclick="clearDisplay()">AC</button>
+                <button class="operator" onclick="deleteLastChar()">DEL</button>
+                <button class="operator" onclick="calculatePercentage()">%</button>
+                <button class="operator" onclick="appendToDisplay('/')">&divide;</button>
                 <button onclick="appendToDisplay('7')">7</button>
                 <button onclick="appendToDisplay('8')">8</button>
                 <button onclick="appendToDisplay('9')">9</button>
-                <button class="operator" onclick="appendToDisplay('/')">÷</button>
+                <button class="operator" onclick="appendToDisplay('*')">&times;</button>
                 <button onclick="appendToDisplay('4')">4</button>
                 <button onclick="appendToDisplay('5')">5</button>
                 <button onclick="appendToDisplay('6')">6</button>
-                <button class="operator" onclick="appendToDisplay('*')">×</button>
+                <button class="operator" onclick="appendToDisplay('-')">-</button>
                 <button onclick="appendToDisplay('1')">1</button>
                 <button onclick="appendToDisplay('2')">2</button>
                 <button onclick="appendToDisplay('3')">3</button>
-                <button class="operator" onclick="appendToDisplay('-')">-</button>
-                <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="appendToDisplay('.')">.</button>
                 <button class="operator" onclick="appendToDisplay('+')">+</button>
+                <button onclick="appendToDisplay('0')">0</button>
+                <button onclick="appendToDisplay('00')">00</button>
+                <button onclick="appendToDisplay('.')">.</button>
                 <button class="equals" onclick="calculate()">=</button>
-                
             </div>
         </div>
     </div>
@@ -158,6 +160,21 @@
 
         function clearDisplay() {
             document.getElementById('display').value = '';
+        }
+
+        function deleteLastChar() {
+            const display = document.getElementById('display');
+            display.value = display.value.slice(0, -1);
+        }
+
+        function calculatePercentage() {
+            try {
+                const display = document.getElementById('display');
+                const value = eval(display.value);
+                display.value = (value / 100).toString();
+            } catch (error) {
+                document.getElementById('display').value = 'Error';
+            }
         }
 
         function calculate() {
@@ -196,4 +213,5 @@
         }, { passive: false });
     </script>
 </body>
-                                                            </html>
+    </html>
+    
