--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Fullscreen Video Calculator</title>
+    <title>Animated Calculator</title>
     <style>
         * {
             box-sizing: border-box;
@@ -137,7 +137,7 @@
                 <button onclick="appendToDisplay('7')">7</button>
                 <button onclick="appendToDisplay('8')">8</button>
                 <button onclick="appendToDisplay('9')">9</button>
-                <button class="operator" onclick="appendToDisplay('*')">&times;</button>
+                <button class="operator" onclick="appendToDisplay('×')">&times;</button>
                 <button onclick="appendToDisplay('4')">4</button>
                 <button onclick="appendToDisplay('5')">5</button>
                 <button onclick="appendToDisplay('6')">6</button>
