--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Fullscreen Video Calculator</title>
+    <title>Animated Calculator</title>
     <style>
         * {
             box-sizing: border-box;
@@ -167,7 +167,7 @@
                 <button onclick="appendToDisplay('3')">3</button>
                 <button class="operator" onclick="appendToDisplay('+')">+</button>
                 <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="appendToDisplay('00')">0</button>
+                <button onclick="appendToDisplay('00')">00</button>
                 <button onclick="appendToDisplay('.')">.</button>
                 <button class="equals" onclick="calculate()">=</button>
             </div>
